--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <div class="container-fluid sec-1">
 
-            <div class="container">
+            <div class="container-fluid">
                 <nav class="navbar navbar-expand-lg navbar-light ">
 
                     <a class="navbar-brand" href="#">LetsDoLoans</a>
@@ -55,7 +55,7 @@
 
 
 
-            <div class="container landing-heading-container ">
+            <div class="container-fluid landing-heading-container ">
                 <div class="row">
                     <div class="col-lg-6 landing-heading-col">
                         <h2 class="landing-heading">
