--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 <head>
     <script src="https://kit.fontawesome.com/58cac67d01.js" crossorigin="anonymous"></script>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
     <!-- google-fonts -->
     <link href="https://fonts.googleapis.com/css?family=Quicksand:600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather:400i&display=swap" rel="stylesheet">
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -59,10 +62,10 @@
                 <div class="row">
                     <div class="col-lg-6 landing-heading-col">
                         <h2 class="landing-heading">
-                            Are funds getting you down?
+                            Is your personal finance getting you down.
                         </h2>
                         <h2 class="landing-heading">
-                            Thats where we come in
+                            We can help!
                         </h2>
                     </div>
                     <div class="col-lg-6">
@@ -86,9 +89,9 @@
             <div class="row wwd-heading">
                 <div class="col">
                     <h3>Do you need a hand?</h3>
-                    <p>We're here to help you!</p>
+                    <p class="subtitle">We're here to help you!</p>
                 </div>
-                
+
             </div>
             <div class="row">
                 <div class="col">
@@ -119,56 +122,91 @@
 
 
     <section id="testimonials">
-            <div class="container">
+        <div class="container">
+            <div class="col test-heading">
                 <h3>Dont take our word for it.</h3>
             </div>
-            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        "I Am very pleased with WeDoLoans, especially that you recieve the funds the same day."
-                    </div>
-                    <div class="carousel-item">
-                        "Elize is the bomb, super service 100% of the time!"
-                    </div>
-                    <div class="carousel-item">
-                        "Never have I recieved the bomber service WeDoLoans offers anywhere else."
-                    </div>
+        </div>
+
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active test-quote">
+                    <p>"I Am very pleased with WeDoLoans, especially that you recieve the funds the same day."</p>
+                    <p> - Anonymous</p>
                 </div>
-                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
+                <div class="carousel-item test-quote">
+                    <p>"Elize is the bomb, super service 100% of the time!"</p>
+                    <p> - Anonymous</p>
+                </div>
+                <div class="carousel-item test-quote">
+                    <p>"Never have I recieved the bomber service WeDoLoans offers anywhere else."</p>
+                    <p> - Anonymous</p>
+                </div>
             </div>
-        </section>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+    </section>
 
 
-        
+
     <section id="statistics">
+
         <div class="container">
             <div class="row">
-                <h2>statistics dont lie</h2>
+                <div class="col">
+                    <h2>Why choose us?</h2>
+                    <p class="subtitle">stats dont lie</p>
+                </div>
+
             </div>
-            <div class="row">
-                <div class="col">
-                    <div class="card">
-
+            <div>
+                <div class="row">
+                    <div class="col">
+                        <div class="card">
+                            <div class="row">
+                                <div class="col">
+                                    <i class="fas fa-smile-beam"></i>
+                                    <p>Over</p>
+                                    <h3>224</h3>
+                                    <p>Happy customers</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="col">
-                    <div class="card">
-
+                    <div class="col">
+                        <div class="card">
+                            <div class="row">
+                                <div class="col">
+                                    <i class="fas fa-clock"></i>
+                                    <p>Over</p>
+                                    <h3>11</h3>
+                                    <p>Years experience</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="col">
-                    <div class="card">
-
+                    <div class="col">
+                        <div class="card">
+                            <div class="row">
+                                <div class="col">
+                                    <i class="fas fa-check"></i>
+                                    <p>Over</p>
+                                    <h3>3324</h3>
+                                    <p>Successful loan applications</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
+
 
         </div>
 
@@ -180,44 +218,65 @@
 
 
     <section id="contact-us">
+
+
         <div class="container">
             <div class="row">
                 <div class="col">
                     <div class="row">
                         <i class="fas fa-phone"></i>
-                        <p>phone number</p>
+                        <p>098 765 6789</p>
                     </div>
                     <div class="row">
                         <i class="fas fa-envelope"></i>
-                        <p>email address</p>
+                        <p>eWhatever@gmai.com</p>
                     </div>
                     <div class="row">
                         <i class="fas fa-map-marker-alt"></i>
-                        <p>address</p>
+                        <p>47th ave 765 Beverley</p>
                     </div>
 
                 </div>
                 <div class="col">
                     <div class="card">
-                        <div class="card-body">
-                            <div class="card-title">
-
-                            </div>
-                        </div>
+                        <article class="card-body">
+                            <h4 class="card-title text-center mb-4 mt-1">Apply now!</h4>
+                            <form>
+                                <div class="form-group">
+                                    <div class="input-group">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text"> <i class="fa fa-user"></i> </span>
+                                        </div>
+                                        <input name="" class="form-control" placeholder="Email or login" type="email">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <div class="input-group">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
+                                        </div>
+                                        <input class="form-control" placeholder="******" type="password">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <button type="submit" class="btn btn-info btn-block"> Login </button>
+                                </div>
+                                <p class="text-center"><a href="#" class="btn">Forgot password?</a></p>
+                            </form>
+                        </article>
                     </div>
-
                 </div>
-                <div class="col">
 
-
-                </div>
             </div>
         </div>
+
+
     </section>
 
 
 
     <!-- Optional JavaScript -->
+    <script src="script/script.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
