Zenbook changes Footer and form

--- a/index.html
+++ b/index.html
@@ -222,22 +222,22 @@
 
         <div class="container">
             <div class="row">
-                <div class="col">
-                    <div class="row">
+                <div class="col contact-details">
+                    <div class="row contact">
                         <i class="fas fa-phone"></i>
                         <p>098 765 6789</p>
                     </div>
-                    <div class="row">
+                    <div class="row contact">
                         <i class="fas fa-envelope"></i>
                         <p>eWhatever@gmai.com</p>
                     </div>
-                    <div class="row">
+                    <div class="row contact">
                         <i class="fas fa-map-marker-alt"></i>
                         <p>47th ave 765 Beverley</p>
                     </div>
 
                 </div>
-                <div class="col">
+                <div class="col card-col">
                     <div class="card">
                         <article class="card-body">
                             <h4 class="card-title text-center mb-4 mt-1">Apply now!</h4>
@@ -247,7 +247,31 @@
                                         <div class="input-group-prepend">
                                             <span class="input-group-text"> <i class="fa fa-user"></i> </span>
                                         </div>
-                                        <input name="" class="form-control" placeholder="Email or login" type="email">
+                                        <input name="" class="form-control" placeholder="Name" type="name">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <div class="input-group">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text"> <i class="fa fa-user"></i> </span>
+                                        </div>
+                                        <input name="" class="form-control" placeholder="Name" type="name">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <div class="input-group">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text"> <i class="fa fa-user"></i> </span>
+                                        </div>
+                                        <input name="" class="form-control" placeholder="Name" type="name">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <div class="input-group">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text"> <i class="fa fa-user"></i> </span>
+                                        </div>
+                                        <input name="" class="form-control" placeholder="Name" type="name">
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -259,9 +283,8 @@
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <button type="submit" class="btn btn-info btn-block"> Login </button>
+                                    <button type="submit" class="btn btn-info btn-block"> Submit </button>
                                 </div>
-                                <p class="text-center"><a href="#" class="btn">Forgot password?</a></p>
                             </form>
                         </article>
                     </div>
